--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 * {
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
   box-sizing: border-box;
 }
+
+
 
 .App {
   text-align: center;
@@ -16,7 +18,7 @@
   color: white;
 }
 
-.Tasks {
+.container {
   width: 80%;
 }
 
@@ -40,14 +42,31 @@ input {
   color: white;
   width: 100%;
   padding: 0.5em;
-  font-size: 0.8em;
   border-radius: 0.5em;
+}
+
+.Timer{
+  border: 1px solid white;
+  width: 100%;
+}
+
+.Timer-buttons {
+  width: 100%;
+  border: 1px solid red;
 }
 
 button {
   padding: 0.5em;
-  margin: 0.5em;
   border-radius: 0.5em;
+  background: black;
+  color: orange;
+  display: inline-flex;
+  justify-content: space-evenly;
+  width: 20%;
+}
+
+button:hover {
+  background: darkblue;
 }
 
 input:focus { outline: none; }
